crates/tsuno-driver/tests/fixtures/snapshots/fail/rejects_bare_rust_binding_in_req.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
assertion_line: 85
expression: snapshot_output(output)
---
status: Some(1)
stdout:
UNSUPPORTED id
  unresolved binding `x` in function contract
  src/main.rs:2:1: 2:18

stderr:
