crates/tsuno-driver/tests/fixtures/snapshots/fail/rejects_binder_in_assume.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
expression: snapshot_output(output)
---
status: Some(1)
stdout:
UNSUPPORTED main
  expected a //@ assume predicate
  src/main.rs:3:2: 3:2

stderr:
