crates/tsuno-driver/tests/fixtures/snapshots/fail/rejects_binder_in_inv.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
assertion_line: 85
expression: snapshot_output(output)
---
status: Some(1)
stdout:
UNSUPPORTED rejects_binder_in_inv
  new spec bindings are not allowed in //@ inv
  src/main.rs:3:5: 3:26

stderr:
