crates/tsuno-driver/tests/fixtures/snapshots/fail/rejects_branch_inside_unsafe.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
assertion_line: 85
expression: snapshot_output(output)
---
status: Some(1)
stdout:
UNSUPPORTED rejects_branch_inside_unsafe
  branches inside unsafe blocks are unsupported
  src/main.rs:5:12: 5:16
PASS main
  all assertions discharged

stderr:
