crates/tsuno-driver/tests/fixtures/snapshots/fail/rejects_builtin_pure_function_type_args.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
assertion_line: 85
expression: snapshot_output(output)
---
status: Some(1)
stdout:
UNSUPPORTED main
  type arguments are not supported on builtin pure function `seq_len`
  src/main.rs:3:2: 3:2

stderr:
