crates/tsuno-driver/tests/fixtures/snapshots/fail/rejects_builtin_seq_rev.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
assertion_line: 85
expression: snapshot_output(output)
---
status: Some(1)
stdout:
UNSUPPORTED main
  type arguments are only supported on enum constructors, found `seq_rev`
  src/main.rs:3:2: 3:2

stderr:
