crates/tsuno-driver/tests/fixtures/snapshots/fail/rejects_call_inside_unsafe.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
assertion_line: 85
expression: snapshot_output(output)
---
status: Some(1)
stdout:
PASS callee
  all assertions discharged
UNSUPPORTED rejects_call_inside_unsafe
  function calls inside unsafe blocks are unsupported
  src/main.rs:7:18: 7:26
PASS main
  all assertions discharged

stderr:
