crates/tsuno-driver/tests/fixtures/snapshots/fail/rejects_consumed_unsafe_raw_req_assert.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
expression: result
---
status: Some(1)
stdout:
PASS overwrite_points_to
  all assertions discharged
FAIL rejects_consumed_unsafe_raw_req_assert
  raw assertion failed
  src/main.rs:15:13: 15:18
PASS main
  all assertions discharged

stderr:
